src/css/apps/user/processmanager.css
#processManager > div.body {
  padding: 0;
  overflow: hidden;
}

#processManager > div.body div.top {
  padding: 15px;
  height: calc(100% - 51px);
}
#processManager > div.body div.actions {
  border-top: var(--win-border);
  padding: 10px;
  background-color: var(--button-bg);
  display: flex;
  align-items: center;
}

#processManager > div.body div.actions div.buttons {
  display: flex;
  align-items: center;
  gap: 10px;
  margin-left: auto;
}

#processManager > div.body div.actions button {
  background-color: var(--button-glass-bg);
  height: 30px;
}

#processManager > div.body div.actions button:hover {
  background-color: var(--button-glass-hover-bg);
}

#processManager > div.body div.actions button:active {
  background-color: var(--button-glass-active-bg);
}

#processManager > div.body div.actions div.sep {
  width: 1px;
  height: 20px;
  background-color: var(--button-hover-bg);
}

#processManager > div.body div.actions p.running {
  opacity: 0.5;
  padding: 5px;
}

#processManager div.process-tree,
#processManager div.indent {
  display: flex;
  flex-direction: column;
  gap: 2px;
}

#processManager > div.body div.row {
  display: flex;
  align-items: center;
  width: 100%;
  padding: 5px;
  border-radius: var(--button-border-rad);
  gap: 10px;
  background-color: var(--win-bg);
  height: 26px;
}

#processManager > div.body div.row.selected {
  background-color: var(--accent-transparent);
}

#processManager > div.body div.row.selected:hover {
  background-color: var(--accent-light-transparent);
}

#processManager > div.body div.row:not(.header):not(.selected):hover {
  background-color: var(--button-bg);
}

#processManager > div.body div.row div.segment.name {
  display: flex;
  align-items: center;
  gap: 5px;
}

#processManager > div.body div.row div.segment.name img {
  height: 16px;
}

#processManager > div.body div.row:not(.header) div.segment:not(.name) {
  opacity: 0.5;
}

#processManager > div.body div.row:not(.service):not(.header) div.segment.pid {
  transform: translate(-34px);
}

#processManager > div.body div.row div.segment.pid:not(.flagged) img {
  opacity: 0;
  pointer-events: none;
}

#processManager > div.body div.row div.segment.pid {
  width: 70px;
  display: flex;
  align-items: center;
  gap: 10px;
}

#processManager > div.body div.row:not(.service) div.segment.name {
  margin-right: auto;
}

#processManager > div.body div.row div.segment.description {
  width: fit-content;
  width: 40%;
  margin-left: auto;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

#processManager > div.body div.row div.segment.status {
  text-align: left;
  width: 70px;
}

#processManager > div.body div.row div.segment.app-id {
  width: 150px;
}

#processManager > div.body div.indent {
  padding-left: 25px;
}

#processManager > div.body div.row.header {
  font-weight: bold;
  margin-bottom: 10px;
  padding: 0 10px;
  padding-left: 5px;
  height: 20px;
  margin-right: 8px;
}

#processManager > div.body div.row.closing {
  transition: opacity 0.3s, margin-bottom 0.3s;
  margin-bottom: -28px;
  opacity: 0;
}

